--- a/my-money-app/backend/package.json
+++ b/my-money-app/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-money-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "src/loader.js",
   "scripts": {
     "dev": "nodemon",
@@ -15,10 +14,11 @@
     "express": "^4.14.0",
     "express-query-int": "^1.0.1",
     "lodash": "^4.17.4",
-    "mongoose": "^4.7.0",
+    "mongoose": "^4.13.7",
     "mongoose-paginate": "^5.0.3",
     "node-restful": "^0.2.5",
     "nodemon": "^1.11.0",
     "pm2": "^2.1.5"
-  }
+  },
+  "description": ""
 }
