--- a/my-money-app/frontend/package.json
+++ b/my-money-app/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "admin-lte": "2.3.6",
     "axios": "0.15.3",
     "babel-core": "6.22.1",
     "babel-loader": "6.2.10",
@@ -21,6 +22,8 @@
     "css-loader": "0.26.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
+    "font-awesome": "4.7.0",
+    "ionicons": "3.0.0",
     "lodash": "4.17.4",
     "react": "15.4.2",
     "react-dom": "15.4.2",
